# webhook-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/application/: service.rs
src/domain/: entities.rs  mod.rs  ports.rs
src/infrastructure/api/: mod.rs  webhook_routes.rs
src/infrastructure/persistence/: in_memory_repo.rs  mod.rs  mongodb_repo.rs
